Cambios en rutas, tipografia, cards

--- a/servicios_gisea/empresas_medianas.html
+++ b/servicios_gisea/empresas_medianas.html
@@ -156,10 +156,10 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="../service_desarollo_web.html"
                                         data-translate="dropdownDesarrollo">Desarollo Web</a></li>
-                                <li><a class="dropdown-item" href="../recursos_humanos.html"
+                                <li><a class="dropdown-item" href="recursos_humanos.html"
                                         data-translate="dropdownRecursos">Recursos
                                         Humanos</a></li>
-                                <li><a class="dropdown-item" href="../capacitacion_it.html"
+                                <li><a class="dropdown-item" href="capacitacion_it.html"
                                         data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
                                 <li><a class="dropdown-item" href="influencers.html"
