--- a/servicios_gisea/negocios_pequenos.html
+++ b/servicios_gisea/negocios_pequenos.html
@@ -89,10 +89,10 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="../service_desarollo_web.html"
                                         data-translate="dropdownDesarrollo">Desarollo Web</a></li>
-                                <li><a class="dropdown-item" href="../recursos_humanos.html"
+                                <li><a class="dropdown-item" href="recursos_humanos.html"
                                         data-translate="dropdownRecursos">Recursos
                                         Humanos</a></li>
-                                <li><a class="dropdown-item" href="../capacitacion_it.html"
+                                <li><a class="dropdown-item" href="capacitacion_it.html"
                                         data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
                                 <li><a class="dropdown-item" href="influencers.html"
@@ -249,7 +249,7 @@
         <div class="container-lg">
             <div class="section-title-revamped">
                 <h1 class="precio-iva">
-                    <span class="precio-principal">DESDE $4,5000 MXN</span>
+                    <span class="precio-principal">DESDE $4,500 MXN</span>
                     <span class="iva-text">+IVA</span>
                 </h1>
                 <a href="#" class="btn-ordena-ya">¡ ORDENA YA !</a>
