--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <img src="img/slide/tercer_banner_asesoramiento.png" class="d-block w-100 img-fluid"
                             alt="Developer Training">
                         <div class="carousel-text-overlay">
-                            <h1 class="developer-training-title" data-translate="carouselTrainingTitle">Capacitacion it
+                            <h1 class="developer-training-title" data-translate="carouselTrainingTitle">Capacitación it
                             </h1>
                             <div class="golden-line"></div>
                             <p class="developer-training-subtitle" data-translate="carouselTrainingSubtitle">"Crece tus
@@ -471,7 +471,7 @@
             </div>
             <div class="footer-bottom d-flex justify-content-between align-items-center">
                 <div class="footer-contact">
-                    <a href="https://wa.me/5215511234567" target="_blank" alt="whatsapp"
+                    <a href="https://wa.me/5561856627" target="_blank" alt="whatsapp"
                         class="red-social-footer whatsapp-contact">
                         <i class="fa-brands fa-whatsapp fa-xl"></i>
                         <span class="whatsapp-text">WhatsApp</span>
