Subiendo seccion de empleo

--- a/about.html
+++ b/about.html
@@ -515,10 +515,10 @@
                                                 <p>Cuento con <b>un año de experiencia</b> como desarrollador Web
                                                     Frontend con <b>tecnologías modernas</b> y capacitación con el
                                                     profesor Rick.</p>
-                                                <div class="tech-stack">
-                                                    <span class="tech-badge">
+                                                <div class="tech-stack-hgcard">
+                                                    <span class="tech-badge-hgcard">
                                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"
-                                                            class="tech-icon">
+                                                            class="tech-icon-hgcard">
                                                             <path fill="#E44D26"
                                                                 d="M19.037 113.876L9.032 1.661h109.936l-10.016 112.198-45.019 12.48z" />
                                                             <path fill="#F16529"
@@ -530,9 +530,9 @@
                                                         </svg>
                                                         HTML
                                                     </span>
-                                                    <span class="tech-badge">
+                                                    <span class="tech-badge-hgcard">
                                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"
-                                                            class="tech-icon">
+                                                            class="tech-icon-hgcard">
                                                             <path fill="#1572B6"
                                                                 d="M18.814 114.123L8.76 1.352h110.48l-10.064 112.754-45.243 12.543-45.119-12.526z" />
                                                             <path fill="#33A9DC"
@@ -548,9 +548,9 @@
                                                         </svg>
                                                         CSS
                                                     </span>
-                                                    <span class="tech-badge">
+                                                    <span class="tech-badge-hgcard">
                                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"
-                                                            class="tech-icon">
+                                                            class="tech-icon-hgcard">
                                                             <path fill="#F0DB4F"
                                                                 d="M1.408 1.408h125.184v125.185H1.408z" />
                                                             <path fill="#323330"
@@ -558,9 +558,9 @@
                                                         </svg>
                                                         JavaScript
                                                     </span>
-                                                    <span class="tech-badge">
+                                                    <span class="tech-badge-hgcard">
                                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"
-                                                            class="tech-icon">
+                                                            class="tech-icon-hgcard">
                                                             <defs>
                                                                 <linearGradient id="bootstrap-a" x1="76.079" x2="523.48"
                                                                     y1="10.798" y2="365.95"
