Agregando cambios correctos de seccion empleo

--- a/servicios_gisea/empleos.html
+++ b/servicios_gisea/empleos.html
@@ -643,8 +643,8 @@
     </section>
     
     <!-- SECCIÓN BECARIO PROJECT MANAGER -->
-    <section id="becario-pm-section" class="service-section py-5">
-        <div class="container">
+    <section id="becario-pm-section" class="puesto-section">
+        <div class="container-lg">
             <div class="section-title">
                 <h2 class="puesto-section-title">Becario Project Manager</h2>
             </div>
