Agregando correctamente la ruta de Trabaja con nosotros

--- a/servicios_gisea/influencers.html
+++ b/servicios_gisea/influencers.html
@@ -89,7 +89,7 @@
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-translate="navTrabaja">Trabaja con <br> Nosotros</a>
+                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br> Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
